substrate/frame/support/test/tests/construct_runtime_ui/duplicate_exclude.stderr
error: `Call` was already declared before. Please remove the duplicate declaration
  --> tests/construct_runtime_ui/duplicate_exclude.rs:26:46
   |
26 |         System: frame_system exclude_parts { Call, Call },
   |                                                    ^^^^
